plugins {
    alias(libs.plugins.springBoot) apply false
    alias(libs.plugins.dependencyManagement) apply false
}

group = 'com.senlainc.javacourses.petushokvaliantsin'
version = '1.0.0'

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'io.spring.dependency-management'

    group = rootProject.group
    version = rootProject.version

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    repositories {
        mavenCentral()
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:${libs.versions.springBoot.get()}"
        }
    }

    dependencies {
        compileOnly libs.lombok
        annotationProcessor libs.lombok
        annotationProcessor 'org.hibernate.orm:hibernate-jpamodelgen'
        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    }
}
